--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
+<html lang="ja">
+  <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,maximum-scale=1">
+    <meta property="og:title" content="Diafreaks">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://nosrith.github.io/diafreaks/">
+    <meta property="og:image" content="https://nosrith.github.io/diafreaks/ogp_image_large.png">
+    <meta property="og:description" content="鉄道ダイヤ図の表示・作図ができるWebサービス。データを手打ちすることなく、文字通り「スジを引く」ことでダイヤ図が作成できます。">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css">
     <title>Diafreaks</title>
