feat: google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,16 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css">
     <title>Diafreaks</title>
-</head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SYW46NR55X"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-SYW46NR55X');
+    </script>
+  </head>
   <body>
     <noscript>
       <strong>We're sorry but Diafreaks doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
