--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,maximum-scale=1">
-    <meta property="og:title" content="Diafreaks">
+    <meta property="og:title" content="Diafreaks - 鉄道ダイヤ図が作図できるWebサービス">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nosrith.github.io/diafreaks/">
     <meta property="og:image" content="https://nosrith.github.io/diafreaks/ogp_image_large.png">
