--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,maximum-scale=1">
-    <meta property="og:title" content="Diafreaks - 鉄道ダイヤ図が作図できるWebサービス">
+    <meta property="og:title" content="Diafreaks - 鉄道ダイヤ図の表示・作図ができるWebサービス">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nosrith.github.io/diafreaks/">
     <meta property="og:image" content="https://nosrith.github.io/diafreaks/ogp_image_large.png">
-    <meta property="og:description" content="鉄道ダイヤ図の表示・作図ができるWebサービス。データを手打ちすることなく、文字通り「スジを引く」ことでダイヤ図が作成できます。">
+    <meta property="og:description" content="データを手打ちすることなく、文字通り「スジを引く」ことでダイヤ図を作成できます。DL不要、携帯でも閲覧可。">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css">
